fixed bug where nested grid-rows don't expand enough in default layout when wrapped in grid-box

--- a/docs/css/grid-default.css
+++ b/docs/css/grid-default.css
@@ -21,6 +21,7 @@ body {
   margin-left: -1%;
   margin-right: -1%;
   width: auto;
+  max-width: none;
   min-width: 0;
 }
 
